--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,29 +21,30 @@
 <body>
 
       <header role="banner">
-            <nav class="navbar navbar-expand-md bg-dark">
-                  <a class="navbar-brand absolute" href="/">
-                        </i>Mongo Web Scraper</a>
-                  <div class="collapse navbar-collapse navbar-light" id="navbarSupportedContent">
-                        <ul class="navbar-nav mx-auto absolute-right">
-                              <li class="nav-item">
-                                    <a class="nav-link active" href="/">
-                                          <i class="fas fa-home"></i> Home</a>
-                              </li>
-                              <li class="nav-item">
-                                    <p>
-                                          <a class="nav-link" href="/scrape">Scrape!</a>
-                                    </p>
-                              </li>
-                              <li class="nav-item">
-                                    <a class="nav-link" href="http://www.informit.com/" target="_blank">Informit</a>
-                              </li>
-                              <li class="nav-item">
-                                    <a class="nav-link" href="https://github.com/baltu008" target="_blank">My Github</a>
-                              </li>
-                        </ul>
-            </nav>
-
+            <div class="container">
+                  <nav class="navbar navbar-expand-md bg-dark">
+                        <a class="navbar-brand absolute" href="/">
+                              </i>Mongo Web Scraper</a>
+                        <div class="collapse navbar-collapse navbar-light" id="navbarSupportedContent">
+                              <ul class="navbar-nav mx-auto absolute-right">
+                                    <li class="nav-item">
+                                          <a class="nav-link active" href="/">
+                                                <i class="fas fa-home"></i> Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                          <p>
+                                                <a class="nav-link" href="/scrape">Scrape!</a>
+                                          </p>
+                                    </li>
+                                    <li class="nav-item">
+                                          <a class="nav-link" href="http://www.informit.com/" target="_blank">Informit</a>
+                                    </li>
+                                    <li class="nav-item">
+                                          <a class="nav-link" href="https://github.com/baltu008" target="_blank">My Github</a>
+                                    </li>
+                              </ul>
+                        </div>
+                  </nav>
             </div>
       </header>
 
