--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,7 +37,7 @@
                                           </p>
                                     </li>
                                     <li class="nav-item">
-                                          <a class="nav-link" href="http://www.informit.com/" target="_blank">Informit</a>
+                                          <a class="nav-link" href="https://www.cnn.com/" target="_blank">CNN</a>
                                     </li>
                                     <li class="nav-item">
                                           <a class="nav-link" href="https://github.com/baltu008" target="_blank">My Github</a>
@@ -60,7 +60,8 @@
             </div>
       </footer>
 
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
             crossorigin="anonymous"></script>
